# light-spq

./: CMakeLists.txt  LICENSE  README2.md  main  setup.py
Google_tests/: CMakeLists.txt  LightSPQTest.cpp
Light_SPQ/: CMakeLists.txt  Common.h  ProcessingNode.cpp  ProcessingNode.h  SupervisorZone.cpp  SupervisorZone.h  library.cpp  library.h
Thirty/python/: CMakeLists.txt  README.md  bindings.cpp  test.py
